docs: add provider metadata and regenerate DNS documentation
Add missing Name field to hetznerhcloud provider metadata which is
required for proper documentation generation.

Generated files updated:
- README.md: Provider table now includes "Hetzner Cloud" entry
- cmd/zz_gen_cmd_dnshelp.go: CLI help text with provider list
- docs/content/dns/zz_gen_hetznerhcloud.md: Provider documentation
- docs/data/zz_cli_help.toml: CLI help data

This resolves the GitHub Actions "Generate and Check generated elements"
workflow failure where git diff detected uncommitted generated files.

--- a/providers/dns/hetznerhcloud/hetznerhcloud.toml
+++ b/providers/dns/hetznerhcloud/hetznerhcloud.toml
@@ -1,3 +1,5 @@
+Name = "Hetzner Cloud"
+Description = ''''''
 URL = "https://docs.hetzner.cloud/reference/dns"
 Code = "hetznerhcloud"
 Since = "v4.28.0"
